# volt-nn

./: CMakeLists.txt  demo.cu  gnn.cu  gnn.cuh  matrix_ops.cu  matrix_ops.cuh  utils.cu  utils.cuh
